2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1827829 from Richard West:
	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(drawItemLabel): Fixed NPE.
	
2007-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYDotRenderer.java
	(legendShape): New field,
	(XYDotRenderer): Initialise new field,
	(getLegendShape): New method,
	(setLegendShape): Likewise,
	(getLegendItem): New method override,
	(equals): Updated for new field,
	(readObject): New method,
	(writeObject): New method.
	
2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(removeDomainMarker(Marker)): New method,
	(removeDomainMarker(Marker, Layer)): Likewise,
	(removeDomainMarker(int, Marker, Layer)): Likewise,
	(removeRangeMarker(Marker)): New method,
	(removeRangeMarker(Marker, Layer)): Likewise,
	(removeRangeMarker(int, Marker, Layer)): Likewise.
	
2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(removeDomainMarker(Marker)): New method,
	(removeDomainMarker(Marker, Layer)): Likewise,
	(removeDomainMarker(int, Marker, Layer)): Likewise,
	(removeRangeMarker(Marker)): New method,
	(removeRangeMarker(Marker, Layer)): Likewise,
	(removeRangeMarker(int, Marker, Layer)): Likewise.

2007-10-31  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/ComparableObjectSeries.java
	(hashCode): Faster implementation,
	* source/org/jfree/data/time/TimeSeries.java
	(hashCode): Likewise,
	* source/org/jfree/data/xy/XYSeriesTests.java
	(hashCode): Likewise.
	
2007-10-29  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/dial/SimpleDialFrame.java: 
	Renamed StandardDialFrame.java.
	
2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java