@@ -193,6 +193,8 @@
  * 26-Sep-2007 : Include index value in IllegalArgumentExceptions (DG);
  * 05-Nov-2007 : Applied patch 1823697, by Richard West, for removal of domain
  *               and range markers (DG);
+ * 12-Nov-2007 : Fixed bug in equals() method for domain and range tick
+ *               band paint attributes (DG);
  *
  */
 
@@ -3024,7 +3026,6 @@ public class XYPlot extends Plot implements ValueAxisPlot,
      */
     public void drawDomainTickBands(Graphics2D g2, Rectangle2D dataArea,
                                     List ticks) {
-        // draw the domain tick bands, if any...
         Paint bandPaint = getDomainTickBandPaint();
         if (bandPaint != null) {
             boolean fillBand = false;
@@ -3060,8 +3061,6 @@ public class XYPlot extends Plot implements ValueAxisPlot,
      */
     public void drawRangeTickBands(Graphics2D g2, Rectangle2D dataArea,
                                    List ticks) {
-
-        // draw the range tick bands, if any...
         Paint bandPaint = getRangeTickBandPaint();
         if (bandPaint != null) {
             boolean fillBand = false;
@@ -4711,6 +4710,14 @@ public class XYPlot extends Plot implements ValueAxisPlot,
             return false;
         }
         if (!ObjectUtilities.equal(this.annotations, that.annotations)) {
+            return false;
+        }
+        if (!PaintUtilities.equal(this.domainTickBandPaint, 
+                that.domainTickBandPaint)) {
+            return false;
+        }
+        if (!PaintUtilities.equal(this.rangeTickBandPaint, 
+                that.rangeTickBandPaint)) {
             return false;
         }
         if (!this.quadrantOrigin.equals(that.quadrantOrigin)) {
