@@ -1,5 +1,13 @@
 2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/plot/XYPlot.java
+	(equals): Added check for domain/rangeTickBandPaint,
+	* source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
+	(fillDomainGridBand): Handle plot orientation properly,
+	(fillRangeGridBand): Likewise.
+	
+2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>
+
 	Patch 1827829 from Richard West:
 	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
 	(drawItemLabel): Fixed NPE.
